--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ ul {
     background-color: blue;
     padding: 7px 20px;
     font-size: 14px;
-    width: 200px;
+    width: 170px;
 }
 .sub-list-link:focus {
     box-shadow: 0px 0px 2px 3px blue;
@@ -68,7 +68,7 @@ ul {
     background-color: blue;
     padding: 10px 23px;
     font-size: 13px;
-    width: 150px;
+    width:max-content;
 }
 .sub-list-link-action:focus {
     box-shadow: 0px 0px 2px 3px red;
