--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@ ul {
     font-size: 14px;
     width: 170px;
 }
+.txt{
+    display: inline-block; 
+    padding-right: 55px;
+}
+.plus{
+    display: inline-block;
+}
 .sub-list-link:focus {
     box-shadow: 0px 0px 2px 3px blue;
 }
